add cookie modal

--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
         footer div>a {
             @apply flex items-center
         }
-
+        /* #onetrust-banner-sdk {
+            display: none !important;
+        } */
     </style>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.cookielaw.org/scripttemplates/otSDKStub.js"  type="text/javascript" charset="UTF-8" data-domain-script="01928b14-5ff8-7992-aa44-411f0544e75c" ></script>
 </head>
 
 <body>
@@ -83,7 +86,7 @@
             
         </footer>
     </div>
-    <a href="" class="fixed bottom-2 left-2"><img src="assets/images/cookies_icon.png" alt=""></a>
+    <!-- <button  class="fixed bottom-2 left-2 ot-floating-button__open"><img src="assets/images/cookies_icon.png" alt=""></button> -->
 </body>
 
 </html>
