footer cookie setting available

--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
         } */
     </style>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script type="text/javascript" src="https://cdn.cookielaw.org/consent/01928b14-5ff8-7992-aa44-411f0544e75c/OtAutoBlock.js" ></script>
     <script src="https://cdn.cookielaw.org/scripttemplates/otSDKStub.js"  type="text/javascript" charset="UTF-8" data-domain-script="01928b14-5ff8-7992-aa44-411f0544e75c" ></script>
+    <script type="text/javascript">
+        function OptanonWrapper() { }
+    </script>
 </head>
 
 <body>
@@ -79,7 +83,7 @@
             <div>
                 <ul class="md:flex">
                     <li class="pr-[10px] text-center"><a class="text-[12px]">Viaggia in Sicurezza 2024</a></li>
-                    <li class="px-[10px] text-center"><a href="" class="hover:text-[#0043B8] hover:underline text-[12px]">Impostazioni cookie</a></li>
+                    <li class="px-[10px] text-center"><a href="#" class="hover:text-[#0043B8] hover:underline text-[12px] ot-sdk-show-settings">Impostazioni cookie</a></li>
                     <li class="px-[10px] text-center"><a class="hover:text-[#0043B8] hover:underline text-[12px]" href="https://www.lkqrhiag-viaggiainsicurezza.it/pdf/regolamento-concorso-viaggia-in-sicurezza.pdf" target="_blank">Regolamento</a></li>
                 </ul>
             </div>
