--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
         @font-face {
             font-family: campton;
-            src: url('assets/fonts/Rene Bieder - Campton Thin.otf');
+            src: url('assets/fonts/CamptonBook.otf');
         }
         @font-face {
             font-family: sharfgroteskmedium;
