--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
 
         footer {
-            @apply flex flex-col justify-center md:flex-row items-center md:justify-around 
+            @apply flex flex-col justify-center items-center p-4 md:flex-row  md:justify-around 
         }
         footer div {
             @apply mb-6
@@ -70,7 +70,7 @@
             <p>Puoi usufruirne presentandolo ad una delle officine ‘a posto’, DediCar e Numero Uno convenzionate.</p>
             
         </div>
-        <footer class="p-4">
+        <footer>
             <div class="md:w-[240px]">
                 <img src="assets/images/lkq_icon.png" alt="">
             </div>
